name:                untilbot
version:             0.1.0.0
synopsis:            A bot for Telegram that makes you complete tasks
description:
  A bot for Telegram that makes you complete tasks
homepage:            http://github.com/neongreen/untilbot
bug-reports:         http://github.com/neongreen/untilbot/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Web
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/neongreen/untilbot.git

executable untilbot
  main-is:             Main.hs
  other-modules:       Telegram
  -- other-extensions:    
  build-depends:       aeson >= 0.9.0.1
                     , api-builder == 0.11.*
                     , base >= 4.8 && < 4.9
                     , base-prelude >= 0.1.21 && < 0.2
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , data-default-class >= 0.0.1
                     , http-client >= 0.4.20
                     , lifted-base >= 0.2.3
                     , megaparsec >= 0.4.3
                     , mtl == 2.2.*
                     , text == 1.2.*
                     , text-format >= 0.3.1
                     , time >= 1.5.0.1
                     , transformers >= 0.4.2.0
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
